# signal_lights

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
custom_components/signal_lights/: __init__.py  const.py  manager.py  manifest.json  sensor.py  services.yaml
scripts/: bump_version.py
tests/: conftest.py  test_baseline_time.py  test_debugging.py  test_rendering.py  test_rules.py  test_scenarios.py  test_signals.py
